name:                jsonparser
version:             0.1.0
synopsis:            An experimental JSON parser.
description:         Please see README.md
homepage:            https://github.com/ExcaliburZero/jsonparser
license:             MIT
license-file:        LICENSE
author:              Christopher Wells
maintainer:          cwellsny@nycap.rr.com
copyright:           2016 Christopher Wells
category:            Parser
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Parse.JSON
  build-depends:       base >= 4.7 && < 5
                     , parsec
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite jsonparser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.Parse.JSONSpec
  build-depends:       base
                     , jsonparser
                     , parsec
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ExcaliburZero/jsonparser
